Perkin-UAT/force-app/main/default/objects/B2B_HTTP_Service__mdt/B2B_HTTP_Service__mdt.object-meta.xml
<CustomObject>
    <description>Used to store the details of HTTP services. PERK-69</description>
    <label>B2B HTTP Service</label>
    <pluralLabel>B2B HTTP Services</pluralLabel>
</CustomObject>