Perkin-UAT/force-app/main/default/objects/B2B_HTTP_Service__mdt/fields/Auth_Codes__c.field-meta.xml
<CustomField>
    <fullName>Auth_Codes__c</fullName>
    <description>Used to store the authorization code. perk-69</description>
    <label>Auth Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>