Perkin-UAT/force-app/main/default/objects/B2B_HTTP_Service__mdt/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <description>Used to store the end point. Perk-69</description>
    <label>End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>