Perkin-UAT/force-app/main/default/objects/B2B_HTTP_Service__mdt/fields/Hmac_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Hmac_Algorithm__c</fullName>
    <label>Hmac Algorithm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>