Perkin-UAT/force-app/main/default/objects/B2B_HTTP_Service__mdt/fields/Org_Id_CA__c.field-meta.xml
<CustomField>
    <fullName>Org_Id_CA__c</fullName>
    <description>Org Id for Canada country</description>
    <label>Org Id CA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>