Perkin-UAT/force-app/main/default/objects/B2B_HTTP_Service__mdt/fields/Org_Id_US__c.field-meta.xml
<CustomField>
    <fullName>Org_Id_US__c</fullName>
    <description>Org ID for the US country</description>
    <label>Org Id US</label>
    <length>255</length>
    <type>Text</type>
</CustomField>