Perkin-UAT/force-app/main/default/objects/B2B_HTTP_Service__mdt/fields/Service_Mode__c.field-meta.xml
<CustomField>
    <fullName>Service_Mode__c</fullName>
    <label>Service Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>none</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>