Perkin-UAT/force-app/main/default/objects/B2B_HTTP_Service__mdt/fields/Service_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Service_Timeout__c</fullName>
    <label>Service Timeout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>